--- a/Day-10/style.css
+++ b/Day-10/style.css
@@ -1,5 +1,10 @@
-.huge{
-    font-size: 10rem;
-    color: #1b64ad;
-    font-family: sans-serif;
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.add{
+    width: 4rem;
 }
