--- a/Day-15/style2.css
+++ b/Day-15/style2.css
@@ -32,10 +32,10 @@ hr{
 }
 
 .main{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-auto-rows: auto;
+    display: flex;
+    flex-flow: row wrap;
     margin-top: 2rem;
+    padding: 2rem;
     width: 95%;
     gap: 2rem;
 }
@@ -44,6 +44,7 @@ hr{
     border: 1px solid #e2e2e2;
     border-radius: 5px;
     height: 400px;
+    width: 400px;
     display: grid;
     place-items: center;
     gap: .5rem;
@@ -55,4 +56,8 @@ hr{
     overflow: hidden;
     text-overflow: ellipsis;
     width: 80%;
+}
+
+.price{
+    font-weight: 700;
 }
